bad/bin_op_or_array_void.example_compiler_output
ERROR
[1mbad/bin_op_or_array_void.lat:4:13: [1;31merror: [0;1moperator || is defined only for `boolean` values, not `int[]` and `void`[m
	new int[3] || foo();
	           [1;32m^[m
